# nova-23

./: MANIFEST.in  nova-compute-install.sh  nova-compute.cfg  packaging.sh  setup.cfg
nova/api/openstack/compute/: servers.py
nova/compute/: manager.py  rpcapi.py
nova/conductor/: manager.py
nova/db/: api.py
nova/db/sqlalchemy/: api.py
nova/network/: manager.py
nova/network/neutronv2/: api.py
nova/tests/api/ec2/: test_cloud.py
nova/tests/api/openstack/compute/: test_servers.py
nova/tests/compute/: test_compute.py  test_compute_api.py  test_compute_mgr.py  test_compute_utils.py  test_rpcapi.py
nova/tests/conductor/: test_conductor.py
nova/tests/db/: test_db_api.py
nova/tests/network/: test_linux_net.py  test_manager.py
nova/tests/virt/libvirt/: test_libvirt.py
nova/tests/virt/xenapi/: test_xenapi.py
nova/virt/vmwareapi/: vmops.py
