[metadata]
name = nova-compute
version = 2014.1.1
summary = Cloud computing fabric controller
description-file =
    README.rst
author = Venusource
author-email = vscloud-dev@venusource.com
home-page = http://www.venusource.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[install]
install_lib = /usr/share

[files]
packages =
    nova

data_files =
    etc/ = etc/*

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[bdist_rpm]
requires =
    lvm2
    genisoimage
    openstack-nova-common = 2014.1-4.el6
    python-libguestfs
    rsync
    vconfig
    iptables-ipv6
    libvirt >= 0.9.6
    libvirt-python
    openssh-clients
    ipmitool
    curl
    iscsi-initiator-utils
    python-cinderclient
    bridge-utils
    fuse
    libguestfs-mount >= 1.7.17
    tunctl
    iptables
    qemu-kvm

post-install = nova-compute-install.sh
